--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ h2{
     position: relative;
     width: 23%;
     border:4px solid #517813;
-    box-shadow:0px 1px 5px 0px #4a4a4a;
+    box-shadow:0 1px 5px 0 #4a4a4a;
 }
 .sectionboutique .articleboutique img{
     width: 100%;
