--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@ header a{
 .mySlides img{
     box-sizing: border-box;
     border:4px solid #517813;
-    box-shadow:0px 1px 5px 0px #4a4a4a;
+    box-shadow:0 1px 5px 0 #4a4a4a;
 }
   /* Next & previous buttons */
 .prev, .next {
@@ -168,7 +168,7 @@ h2{
     justify-content: space-between;
     box-sizing: border-box;
     border:4px solid #517813;
-    box-shadow:0px 1px 5px 0px #4a4a4a;
+    box-shadow:0 1px 5px 0 #4a4a4a;
     background-color:#e0f1c5;
 }
 .sectionblog .articleblog img{
@@ -283,13 +283,13 @@ h2{
     width:100%;
     min-height: 100%;
     position: absolute;
-    top: 0px;
+    top: 0;
     display: flex;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
 }
 .imgtitre h1{
-    margin: 0px auto;
+    margin: 0 auto;
     color: #e0f1c5;
     text-shadow: 1px 1px 2px #2f440b;
 }
@@ -313,13 +313,13 @@ h2{
     width:100%;
     min-height: 100%;
     position: absolute;
-    top: 0px;
+    top: 0;
     display: flex;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
 }
 .imgtitre h1{
-    margin: 0px auto;
+    margin: 0 auto;
     color:#e0f1c5;
     text-shadow: 1px 1px 2px #2f440b;
 }
@@ -343,7 +343,7 @@ h2{
     width:100%;
     min-height: 100%;
     position: absolute;
-    top: 0px;
+    top: 0;
     display: flex;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
@@ -373,13 +373,13 @@ h2{
     width:100%;
     min-height: 100%;
     position: absolute;
-    top: 0px;
+    top: 0;
     display: flex;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
 }
 .imgtitre h1{
-    margin: 0px auto;
+    margin: 0 auto;
     color:#e0f1c5;
     text-shadow: 1px 1px 2px #2f440b;
 }
