--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@ header a{
 .mySlides img{
     box-sizing: border-box;
     border:4px solid #517813;
-    box-shadow:0px 1px 5px 0px #4a4a4a;
+    box-shadow:0 1px 5px 0 #4a4a4a;
 }
   /* Next & previous buttons */
 .prev, .next {
@@ -94,7 +94,7 @@ header a{
     user-select: none;
 }
 .next {
-    right: 0px;
+    right: 0;
     border-radius: 3px 0 0 3px;
 }
   
@@ -127,7 +127,7 @@ h2{
     position: relative;
     width: 23%;
     border:4px solid #517813;
-    box-shadow:0px 1px 5px 0px #4a4a4a;
+    box-shadow:0 1px 5px 0 #4a4a4a;
 }
 .sectionboutique .articleboutique img{
     width: 100%;
@@ -168,7 +168,7 @@ h2{
     justify-content: space-between;
     box-sizing: border-box;
     border:4px solid #517813;
-    box-shadow:0px 1px 5px 0px #4a4a4a;
+    box-shadow:0 1px 5px 0 #4a4a4a;
     background-color:#e0f1c5;
 }
 .sectionblog .articleblog img{
@@ -313,7 +313,7 @@ h2{
     width:100%;
     min-height: 100%;
     position: absolute;
-    top: 0px;
+    top: 0;
     display: flex;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
@@ -349,7 +349,7 @@ h2{
     background-color: rgba(0,0,0,0.3);
 }
 .imgtitre h1{
-    margin: 0px auto;
+    margin: 0 auto;
     color:#e0f1c5;
     text-shadow: 1px 1px 2px #2f440b;
 }
@@ -379,7 +379,7 @@ h2{
     background-color: rgba(0,0,0,0.3);
 }
 .imgtitre h1{
-    margin: 0px auto;
+    margin: 0 auto;
     color:#e0f1c5;
     text-shadow: 1px 1px 2px #2f440b;
 }
