--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,7 +391,7 @@ fieldset{
     width:40%;
     border: 4px double #6d9f1a;
     padding:20px 10px;
-    margin:0px auto;
+    margin:0 auto;
 }
 #contact fieldset legend{
     color: #6d9f1a;
@@ -422,20 +422,21 @@ fieldset{
     /* couleur de fond quand il y a un clic sur la zone */
     background-color:#e0f1c5 ;
 }
-#contact p input[type=submit],
-#contact p input[type=reset]{
+#contact p #submit,
+#contact p #reset{
     padding:5px 15px;
     background-color:#6d9f1a;
     color: white;
     border: 4px double white;
     border-radius: 25px;
     margin: 10px;
+    cursor: pointer;
 }
 #contact p{
     text-align:center;
 }
-#contact p input[type=submit]:hover,
-#contact p input[type=reset]:hover{
+#contact p #submit:hover,
+#contact p #reset:hover{
     background-color:#e0f1c5;
 }
 /* login */
